# local-minutes-app

./: .gitignore  README.md  package.json  pnpm-lock.yaml  start-tauri.sh  start.sh
.github/workflows/: windows-desktop-build.yml  windows-portable-build.yml
backend/: __init__.py  database.py  launcher.py  main.py  models.py  requirements.txt  schemas.py
backend/routers/: __init__.py  jobs.py  recordings.py  runtime.py  summaries.py  transcripts.py
backend/services/: __init__.py  audio.py  llm_provider.py  summarization.py  summary_templates.py  transcription.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AudioDeleteDialog.tsx  RecordingCaptureDialog.tsx  RecordingDeleteDialog.tsx  SummaryViewer.tsx  TranscriptEditor.tsx  WhisperSettingsDialog.tsx
frontend/src/lib/: audioRecording.ts  tauriRuntimeSetup.ts  whisperSettings.ts
frontend/src/pages/: RecordingDetail.tsx  RecordingList.tsx  RuntimeSetup.tsx
scripts/: build_backend.py  package_portable.py  setup.bat  setup.sh  whisper_transcribe.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  processing.rs  runtime_assets.rs
src-tauri/windows/: hooks.nsh
src/components/: RecorderDialog.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  (+3 more)
src/lib/: tauri.ts  utils.ts
src/pages/: RecordingDetail.tsx  RecordingList.tsx  Setup.tsx
