[package]
name = "local-minutes-app"
version = "0.1.0"
description = "Local Minutes desktop app"
authors = ["machamu-24"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
